# PDataViewer

./: .env  .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.local.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
backend/api/: auth.py  config.py  dependencies.py  main.py  model.py  routes.py  visualization.py
backend/api/routers/: autocompletion.py  biomarkers.py  cdm.py  cohorts.py  database.py  longitudinal.py  stupdypicker.py  visualization.py
backend/api/tasks/: import_tasks.py
backend/cdm/: Comorbidities.csv  DaTscan.csv  apoe.csv  clinical.csv  comorbidities.csv  csf.csv  datscan.csv  demographics.csv  dti.csv  family.csv  genetics.csv  lifestyle.csv  pet.csv  vaccinations.csv
backend/data/: metadata.csv
backend/data/cdm/: APOE.csv  CSF.csv  Clinical.csv  Comorbidities.csv  DTI.csv  DaTscan.csv  Demographics.csv  Family.csv  Genetics.csv  Lifestyle.csv  PET.csv  Vaccinations.csv
backend/database/: models.py  postgresql.py  typeddicts.py
backend/datasets/cdm/: csf.csv  genetics.csv  lifestyle.csv
backend/db/: cdm.db
backend/functions/: autocomplete.py  preprocessing.py  studypicker.py  visualization.py
backend/preprocessing/: biomarkers.py  longitudinal.py  studypicker.py  visualization.py
backend/repository/: base.py  sqllite.py
backend/tests/: test_autocomplete.py  test_merge_clean.py  test_repository.py  test_studypicker.py  test_visualization.py
frontend/: Dockerfile  (+13 more)
(+238 files in other folders)
